--- a/extension/chrome/src/manifest.json
+++ b/extension/chrome/src/manifest.json
@@ -21,6 +21,10 @@
 
   "default_locale": "de",
 
+  "permissions": [
+    "http://188.194.18.92:8088/*"
+  ],
+
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
