--- a/extension/firefox/src/package.json
+++ b/extension/firefox/src/package.json
@@ -2,7 +2,7 @@
   "id": "jid1-4LodmmNAEuaoRQ",
   "name": "diskuss",
   "title": ":Diskuss",
-  "description": "Mit :Diskuss endlich unzensiert im Web diskutieren",
+  "description": "",
   "author": "",
   "license": "MPL 2.0",
   "version": "0.9",
