8088, minVersion, FF Bug cloneInto
Changed port 8088 from server to standard web port
Added mandatory minVersions for extensions
Bug fixed FF not supported cloneInto in Version 29

--- a/extension/chrome/src/manifest.json
+++ b/extension/chrome/src/manifest.json
@@ -22,12 +22,14 @@
   "default_locale": "de",
 
   "permissions": [
-    "http://diskuss.no-ip.org:8088/*"
+    "http://diskuss.no-ip.org/*"
   ],
 
   "icons": {
     "16": "icons/16.png",
     "48": "icons/48.png",
     "128": "icons/128.png"
-  }
+  },
+
+   "minimum_chrome_version": "31"  
 }
